// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change orientation 1`] = `
<DocumentFragment>
  <div
    class="css-70qvj9"
  >
    Flex Me
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-k008qs"
  >
    Flex Me
  </div>
</DocumentFragment>
`;
